# app/Models/Course.php
@@ -2,10 +2,13 @@
 
 namespace App\Models;
 
+use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
 class Course extends Model
 {
+    use HasFactory;
+
     protected $table = 'courses';
 
     protected $fillable = [
@@ -22,7 +25,9 @@ class Course extends Model
         'semester_code',
         'max_students',
         'remarks',
-        'code', // 課程代碼，會自動生成
+        'code',
+        'start_time_code',
+        'end_time_code',
     ];
 
     protected static function boot()
@@ -51,5 +56,41 @@ class Course extends Model
         $serialNumber = str_pad($serial, 3, '0', STR_PAD_LEFT); // 補滿三位數
 
         return "{$departmentCode}{$levelCode}{$serialNumber}";
+    }
+
+    public function teacher(): \Illuminate\Database\Eloquent\Relations\BelongsTo
+    {
+        return $this->belongsTo(User::class, 'teacher_id');
+    }
+
+    public function college(): \Illuminate\Database\Eloquent\Relations\BelongsTo
+    {
+        return $this->belongsTo(College::class);
+    }
+
+    public function department(): \Illuminate\Database\Eloquent\Relations\BelongsTo
+    {
+        return $this->belongsTo(Department::class);
+    }
+
+    public function classroom(): \Illuminate\Database\Eloquent\Relations\BelongsTo
+    {
+        return $this->belongsTo(Classroom::class);
+    }
+
+    public function students(): \Illuminate\Database\Eloquent\Relations\BelongsToMany
+    {
+        return $this->belongsToMany(User::class, 'course_student', 'course_id', 'student_id')
+                    ->withTimestamps();
+    }
+
+    public function startTime(): \Illuminate\Database\Eloquent\Relations\BelongsTo
+    {
+        return $this->belongsTo(TimeCode::class, 'start_time_code', 'code');
+    }
+
+    public function endTime(): \Illuminate\Database\Eloquent\Relations\BelongsTo
+    {
+        return $this->belongsTo(TimeCode::class, 'end_time_code', 'code');
     }
 }
