# app/Swagger/Api/TeacherController.php
@@ -32,11 +32,13 @@ class TeacherController
      *     @OA\Property(property="content", type="string", description="課程大綱", example="範例課程內容"),
      *     @OA\Property(property="college_id", type="integer", description="學院ID", example=1),
      *     @OA\Property(property="department_id", type="integer", description="系所ID", example=1),
-     *     @OA\Property(property="level_code", type="string", description="課程等級代碼", example="1"),
+     *     @OA\Property(property="level_code", type="string", description="年級代碼", example="1"),
      *     @OA\Property(property="classroom_id", type="integer", description="教室ID", example=1),
      *     @OA\Property(property="credit", type="integer", description="學分數", example=3),
      *     @OA\Property(property="is_required", type="boolean", description="是否必修", example=true),
      *     @OA\Property(property="semester_code", type="string", description="學年度代碼", example="115-1"),
+     *     @OA\Property(property="start_time_code", type="string", description="上課時間代碼", example="1"),
+     *     @OA\Property(property="end_time_code", type="string", description="下課時間代碼", example="2"),
      *     @OA\Property(property="max_students", type="integer", description="人數上限", example=30),
      *     @OA\Property(property="remarks", type="string", description="備註", example="無"),
      *
